// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationSummarySwitch renders checked 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  title="Hide Citation Summary"
>
  <Switch
    checked={true}
    checkedChildren={<ForwardRef(BarChartOutlined) />}
    onChange={[MockFunction]}
    unCheckedChildren={<ForwardRef(BarChartOutlined) />}
  />
</Tooltip>
`;

exports[`CitationSummarySwitch renders unchecked 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  title="Show Citation Summary"
>
  <Switch
    checked={false}
    checkedChildren={<ForwardRef(BarChartOutlined) />}
    onChange={[MockFunction]}
    unCheckedChildren={<ForwardRef(BarChartOutlined) />}
  />
</Tooltip>
`;
